<resources>
    <string name="app_name">Group 29</string>
    <string name="choose_a_word">Choose A Word</string>
    <string name="server_ip_address">Choose Server Ip Address</string>

    <string-array name="server_ips">
        <item>10.211.17.171</item>
    </string-array>
    <string-array name="spinner_words">
        <item>Alaska</item>
        <item>Arizona</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Kansas</item>
        <item>Louisiana</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Nevada</item>
        <item>New_Jersey</item>
        <item>New_Mexico</item>
        <item>New_York</item>
        <item>Ohio</item>
        <item>Pennsylvania</item>
        <item>South_Carolina</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Washington</item>
        <item>Wisconsin</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>


    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="gotoupload">GotoUpload</string>
    <string name="learn_checkbox">Learn</string>
    <string name="practice_checkbox">Practice</string>
    <string name="cancel">Re-Record</string>
    <string name="upload">Upload</string>
    <string name="record">Record</string>
</resources>
